--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -47,6 +47,7 @@
     "@types/archiver": "^6.0.3",
     "@types/chai": "^5.0.1",
     "@types/jest": "^29.5.14",
+    "@types/mocha": "^10.0.10",
     "@types/mock-fs": "^4.13.4",
     "@types/properties-reader": "^2.1.3",
     "@types/unzipper": "^0.10.10",
