--- a/apps/shared/tsconfig.json
+++ b/apps/shared/tsconfig.json
@@ -13,7 +13,7 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "types": ["node"],
-    "declaration": true
+    "declaration": true,
   },
   "compileOnSave": true,
   "include": ["src/**/*"],
